--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: master
+          
+      - name: Print env
+        run: env
 
       - name: Run a one-line script
         run: echo Hello, world!
