--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [master]
   workflow_dispatch: # Allows you to run this workflow manually
+  
+env:
+  VAR1: test1
+  VAR2: ${{env.VAR1}}2
 
 jobs:
   empty-job:
@@ -20,7 +24,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: master
-          
+
+      - name: Test
+        run: echo $VAR1 $VAR2
+
       - name: Print env
         run: env
 
