--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
 
       - name: Print env
         run: env
+        
+      - name: Print pwd
+        run: pwd
 
       - name: Run a one-line script
         run: echo Hello, world!
