--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,10 @@ jobs:
       - name: Print env
         run: env
         
-      - name: Print pwd
-        run: pwd
+      - name: Print stuff
+        run: |
+          pwd
+          echo $RUNNER_WORKSPACE
 
       - name: Run a one-line script
         run: echo Hello, world!
