--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           pwd
           echo $RUNNER_WORKSPACE
+          echo $GITHUB_WORKSPACE
 
       - name: Run a one-line script
         run: echo Hello, world!
