--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ jobs:
     
     env:
       VAR2: false
-      VAR3: "Hello ${{env.VAR1}}"
 
     # Steps represent a sequence of tasks that will be executed
     steps:
@@ -27,6 +26,8 @@ jobs:
           ref: master
 
       - name: Test
+        env:
+          VAR3: "Hello ${{env.VAR1}}"
         run: echo $VAR1 $VAR2 $VAR3
         
       - name: Test conditional 1
