--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ on:
   
 env:
   VAR1: false
+  VAR_TEST: test-${{customKey}}
   VAR_IN1: ${{github.event.inputs.customKey || 'fallback2'}}
+  VAR_IN2: ${{github.event.inputs.customKey || env.VAR_TEST }}
   VERSIONS_TO_KEEP: 3
 
 jobs:
