--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
   
 env:
   VAR1: false
-  VAR_TEST: test-${{customKey}}
+  VAR_TEST: test-${{github.event.inputs.customKey}}
   VAR_IN1: ${{github.event.inputs.customKey || 'fallback2'}}
   VAR_IN2: ${{github.event.inputs.customKey || env.VAR_TEST }}
   VERSIONS_TO_KEEP: 3
