--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     env:
       VAR2: false
       VAR_IN2: ${{github.event.inputs.customKey || 'fallback2'}}
-      VAR_IN42: ${{github.event.inputs.customKey || env.VAR_TEST }}
+      VAR_IN42: ${{github.event.inputs.customKey || $VAR_TEST }}
 
     # Steps represent a sequence of tasks that will be executed
     steps:
