fix: Dockerfile user & path

--- a/.github/actions/docker-test/Dockerfile
+++ b/.github/actions/docker-test/Dockerfile
@@ -1,10 +1,5 @@
 FROM denoland/deno
 
-WORKDIR /app
-
-USER deno
-
-ADD . .
-RUN deno cache main.ts
+COPY main.ts main.ts
 
 ENTRYPOINT [ "deno", "run", "--allow-env", "--allow-read", "main.ts" ]
