fix: use root path?

--- a/.github/actions/docker-test/Dockerfile
+++ b/.github/actions/docker-test/Dockerfile
@@ -1,5 +1,5 @@
 FROM denoland/deno
 
-COPY main.ts main.ts
+COPY main.ts /main.ts
 
-ENTRYPOINT [ "deno", "run", "--allow-env", "--allow-read", "main.ts" ]
+ENTRYPOINT [ "deno", "run", "--allow-env", "--allow-read", "/main.ts" ]
