--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,8 +97,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: |
-          echo ${{ github.workspace }}
           echo $GITHUB_WORKSPACE
+          cat ${{ github.workspace }}/README.md
 
       - uses: ./.github/actions/docker-test
         with:
