chore: git log more infos

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,7 +108,7 @@ jobs:
 
       - run: cat README.md
 
-      - run: git log
+      - run: git log --oneline -n 200
 
   CustomAction:
     name: "Custom Docker Action 🐳 🦕"
