--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
     name: "Build stuff 🔨"
     runs-on: ubuntu-latest
 
+    outputs:
+      JOUT1: ${{ steps.result.outputs.JOUT1 }}
+      JOUT2: ${{ steps.result.outputs.JOUT2 }}
+
     env:
       VAR2: false
       FALLBACK: "stringue"
@@ -82,6 +86,11 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
+      - name: Result
+        id: result
+        run: |
+          echo "JOUT1=MyValue" >> $GITHUB_OUTPUT
+
   Build2:
     if: ${{ false }}
     name: "Build v2"
@@ -89,6 +98,26 @@ jobs:
 
     steps:
       - run: echo "it ran"
+
+  Build3:
+    runs-on: ubuntu-latest
+    needs: [Build]
+
+    steps:
+      - run: echo "JOUT1 is defined!"
+        if: ${{ needs.Build.outputs.JOUT1 }}
+      - run: echo "JOUT1 is MyValue"
+        if: needs.Build.outputs.JOUT1 == 'MyValue'
+      - run: echo "JOUT2 is defined!"
+        if: ${{ needs.Build.outputs.JOUT2 }}
+
+  BuildCond:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    if: needs.Build.outputs.JOUT2
+
+    steps:
+      - run: echo "JOUT2 is defined!"
 
   Reusable:
     uses: ./.github/workflows/reusable.yml
