ci: fix git user

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -16,6 +16,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Config git user
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
       - name: tag
         run: |
           VERSION=v${{ github.run_number }}
