--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,14 @@ env:
   VERSIONS_TO_KEEP: 3
 
 jobs:
+  commitlint:
+    name: "Commitlint 📝"
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: wagoid/commitlint-github-action@v6
+
   Build:
     name: "Build stuff 🔨"
     runs-on: ubuntu-latest
